# ncc-web-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yaml  find_answer.py  main.py  pyproject.toml
notebooks/: make_qa_dataset.ipynb  make_qa_dataset_master.ipynb
src/: chat.py  fqa_service.py  line.py  line_rule.py  login.py  ncc_chatbot_rule.py
